Fixed Navbar, now aligned with the page size and displays proper burger menu or links

--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,11 @@
 @tailwind utilities;
 
 :root {
-  --body-bg-color: #920000; /* Define your body background color here */
+  --body-bg-color: #565454; /* Define your body background color here */
 }
 
 body {
-  background-color: var(
-    --body-bg-color
-  ); /* Set your desired background color here */
+  background-color: var(--body-bg-color);
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
@@ -20,7 +18,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
 
